--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "path": "^0.12.7"
     },
     "devDependencies": {
-        "@types/bcrypt": "^5.0.0"
+        "@types/bcrypt": "^5.0.0",
+        "@types/express": "^4.17.13",
+        "@types/morgan": "^1.9.3",
+        "@types/multer": "^1.4.7"
     }
 }
